ec2.tf
resource "tls_private_key" "Valhalla_key" {
  algorithm = "RSA"
  rsa_bits  = 4096
}

resource "aws_key_pair" "generated_key" {
  key_name   = "Valhalla-key-pair"
  public_key = tls_private_key.dev_key.public_key_openssh

  provisioner "local-exec" { # Generate "Valhalla-key-pair.pem" in current directory
    command = <<-EOT
      echo '${tls_private_key.Valhalla_key.private_key_pem}' > ./Valhalla-key-pair.pem
      chmod 400 ./Valhalla-key-pair.pem
    EOT
  }

}


resource "aws_instance" "Valhalla" {
  ami                         = "ami-06aa3f7caf3a30282"
  instance_type               = "t2.micro"
  subnet_id                   = aws_subnet.public.id
  vpc_security_group_ids      = ["${aws_security_group.-Valhalla_sg.id}"]
  key_name                    = "Valhalla-key-pair"
  associate_public_ip_address = true
  tags = {
    Name = "Valhalla"
  }
}
